fixed filter and scroll to top button

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,10 @@
     @apply text-2xl font-primary font-semibold tracking-[1px] mb-2;
   }
   .btn {
-    @apply text-[15px] tracking-[3px] font-tertiary uppercase text-white flex-1 transition-all px-8 flex justify-center items-center;
+    @apply text-[15px] tracking-[3px] font-tertiary uppercase text-white flex-1 transition-all px-6 flex justify-center items-center;
+  }
+  .btn-reset {
+    @apply text-[15px] tracking-[3px] font-tertiary uppercase text-white flex-1 lg:flex-initial transition-all px-8 flex justify-center items-center;
   }
   .btn-sm {
     @apply h-[48px];
